--- a/global.css
+++ b/global.css
@@ -699,7 +699,7 @@ li {
   font-size: 26px;
   font-weight: bolder;
   background-size: contain;
-  width: 1000%;
+  width: 90%!important;
   height: 65px;
   background-repeat: no-repeat;
   border: none;
