--- a/global.css
+++ b/global.css
@@ -732,5 +732,8 @@ label{
   font-family: myFirstFont;
   font-size: 15px;
 }
-
-
+ @media only screen and (max-width: 360px){
+   .button button{
+     height: 53px !important;
+   }
+ }
