--- a/global.css
+++ b/global.css
@@ -733,7 +733,9 @@ label{
   font-size: 15px;
 }
 @media only screen and (min-width: 365px){
-   .button button{
+  #email_ver_but_send ,
+  #email_ver_but_resend,
+  #email_ver_but_verify {
      height: 53px !important;
    }
  }
