--- a/global.css
+++ b/global.css
@@ -588,7 +588,7 @@ li {
   height: 100%;
   left: 0;
   position: fixed;
-  top: 0;
+  top: -10;
   width: 100%;
 }
 
@@ -730,8 +730,11 @@ li {
   font-weight: bolder;
 }
 #email_ver_wait {
-  background-image: url(./gears.gif)!important;
-}
+  background-image: url(./gears.gif) !important;
+  width: 477px;
+  height: 477px;
+  background-repeat: no-repeat;
+  }
 label{
   font-family: myFirstFont;
   font-size: 15px;
