--- a/global.css
+++ b/global.css
@@ -581,7 +581,7 @@ li {
 }
 
 .working:before {
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,1);
   content: '';
   display: block;
   height: 100%;
@@ -604,7 +604,7 @@ li {
   border-radius: 0.5em;
   box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
   content: '';
-  display: block;
+  display: none;
   height: 1em;
   font-size: 10px;
   margin-top: -0.5em;
@@ -737,4 +737,10 @@ label{
   width: 477px;
   height: 477px;
   background-repeat: no-repeat;
+}
+button:focus{
+  outline: none !important;
+}
+input:focus{
+  outline: none !important;
 }
