--- a/global.css
+++ b/global.css
@@ -7,7 +7,7 @@ body {
   background-image: none;
   background-color: transparent;
   text-align: left;
-  font-family: Arial, Helvetica, sans-serif, sans-serif;
+  font-family: myFirstFont, sans-serif, sans-serif;
   display: flex;
   justify-content: center;
 }
@@ -483,7 +483,7 @@ li {
 .error.itemLevel p:before {
   content: "\e101";
   display: inline-block;
-  font-family: 'Glyphicons Halflings';
+  font-family: 'myFirstFont';
   font-style: normal;
   font-weight: 400;
   line-height: 1;
